Changelog
---------

## NEXT_RELEASE

- added BatList.fold_while : ('acc -> 'a -> bool) -> ('acc -> 'a -> 'acc) ->
                             'acc -> 'a list -> 'acc * 'a list
  #889
  (Francois Berenger, Thibault Suzanne)

- fix `BatNum.of_float_string` on inputs between -1 and 0:
  "-0.5" or "-.5" would be interpreted as "0.5" or ".5".
  (Gabriel Scherer, report by Marcel Hark)
  #886, #887

## v2.9.0 (minor release)

This minor release adds support for OCaml 4.07.0, as well as a certain
number of fixes, improvements and documentation clarification from our
contributors. Thanks in particular to Max Mouratov for his varied
contributions.

This release is compatible with OCaml 4.07.0, but it is not complete
with respect to the standard library of OCaml 4.07.0: this release saw
a lot of changes to the standard library, which have not yet been made
available in the corresponding Batteries module. This means that users
of OCaml 4.07.0 (and Batteries 2.9.0) will have access to these
functions, but users of older OCaml versions (and Batteries 2.9.0)
will not. If you are looking for this kind of backward-compatibility
of new functions, as provided by previous Batteries releases, we
recommend trying the new 'stdcompat' library by Thierry Martinez:

  https://github.com/thierry-martinez/stdcompat

Full changelog:

- add `BatString.cut_on_char : char -> int -> string -> string`
  (Kahina Fekir, Thibault Suzanne, request by François Bérenger)
  #807, #856

- add `BatString.index_after_n : char -> int -> string -> int`
  (Kahina Fekir)

- faster BatArray.partition
  #829
  (Francois Berenger, Gabriel Scherer)

- add `BatArray.split: ('a * 'b) array -> 'a array * 'b array`
  #826
  (Francois Berenger)

- add `BatString.count_string: string -> string -> int`
  #799
  (Francois Berenger)

- Int: optimized implementation of Safe_int.mul
  #808, #851
  (Max Mouratov)

- Fix: in case of conflicted bindings, [Map.union m1 m2] should