@@ -13,6 +13,10 @@ Changelog
   (Gabriel Scherer, report by Marcel Hark)
   #886, #887
 
+- added BatHashtbl.merge and merge_all
+__#891
+__(Cedric Cellier, Francois Berenger, Gabriel Scherer)
+
 ## v2.9.0 (minor release)
 
 This minor release adds support for OCaml 4.07.0, as well as a certain
